# sppt

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-pypi.yml  zenodo.yml
notebooks/: 01_quickstart.ipynb  02_advanced_examples.ipynb
scripts/: generate_reference.py
sppt/: __init__.py  bootstrap.py  core.py  metrics.py
tests/: __init__.py  test_core.py
tests/parity/: __init__.py  test_parity.py
tests/parity/expected/: basic_test.csv  basic_test.csv.attrs  with_zeros.csv  with_zeros.csv.attrs
tests/parity/fixtures/: basic_test.csv  with_zeros.csv
